--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello assignment 2</title>
+	<title>The KETO Diet</title>
 </head>
 <body>
-<h1> Mod2 Solution</h1>
+<h1> The KETO Diet</h1>
+<section>
+	<h2 class=""> 80% Fats </h2>
+	<p id="1"> Fats include Coconut oil, olive oil, grass fed butter, avocado, nuts and seeds,high-fat dairy.</p> 
+</section>
+
+<section>
+	<h2 class=""> 15% Protein </h2>
+	<p id="2"> Protein includes eggs, chicken, beef, pork, fish.</p>
+</section>
+<section>
+	<h2> 5% Carbs </h2>
+	<p id="3"> Carbs include above ground veggies (broccoli, cauliflower, lettuce, zucchini). Leafy greens (spinach and kale). Low glycemic impact berries (rasberries, blackberries, etc.)
+</section>
 </body>
 </html>
