commit new changes.

--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta name= "viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+	
 	<title>The KETO Diet</title>
 </head>
 <body>
 <h1> The KETO Diet</h1>
-<section>
-	<h2 class=""> 80% Fats </h2>
-	<p id="1"> Fats include Coconut oil, olive oil, grass fed butter, avocado, nuts and seeds,high-fat dairy.</p> 
-</section>
 
-<section>
-	<h2 class=""> 15% Protein </h2>
-	<p id="2"> Protein includes eggs, chicken, beef, pork, fish.</p>
-</section>
-<section>
-	<h2> 5% Carbs </h2>
-	<p id="3"> Carbs include above ground veggies (broccoli, cauliflower, lettuce, zucchini). Leafy greens (spinach and kale). Low glycemic impact berries (rasberries, blackberries, etc.)
-</section>
+<div class="row">
+	
+<div id="box1" class="col-lg-4 col-md-6 col-sm-12">
+
+	<h2 id="fat"> Fat	</h2>
+		<p>  Fats include Coconut oil, olive oil, grass fed butter, avocado, nuts and seeds,high-fat dairy.
+		</p>
+	 
+</div>
+
+
+
+
+<div id="box2" class="col-lg-4 col-md-6 col-sm-12">
+ 
+	<h2 id="protein"> Protein </h2>
+	<p> Protein includes eggs, chicken, beef, pork, fish. Which should be consumed in moderation.</p>
+
+</div>
+
+
+<div id="box3" class="col-lg-4 col-md-12 col-sm-12">
+ 
+	<h2 id="carbs">Carbs</h2>
+	<p>Carbs include above ground veggies, leafy greens and low glycemic impact berries.</p>
+</div>
+</div>
+
+
 </body>
 </html>
