--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -5,17 +5,17 @@
     <meta name= "viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 	
-	<title>The KETO Diet</title>
+	<title>Week 2 Solution</title>
 </head>
 <body>
-<h1> The KETO Diet</h1>
+<h1> Our Menu</h1>
 
 <div class="row">
 	
 <div id="box1" class="col-lg-4 col-md-6 col-sm-12">
 
-	<h2 id="fat"> Fat	</h2>
-		<p>  Fats include Coconut oil, olive oil, grass fed butter, avocado, nuts and seeds,high-fat dairy.
+	<h2 id="Chicken"> Chicken	</h2>
+		<p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra orci nisi, eu bibendum ex malesuada et. Vestibulum sit amet felis dui. Donec ac nisl sit amet nisi egestas elementum. Curabitur elit odio, rutrum sit amet varius eu, sagittis vitae leo. Maecenas nec eros dolor. In hac habitasse platea dictumst. Maecenas ultricies, turpis ac euismod egestas, quam metus auctor tellus, sit amet faucibus ipsum odio nec mauris. Cras ac elementum mauris, ac consectetur felis
 		</p>
 	 
 </div>
@@ -25,16 +25,16 @@
 
 <div id="box2" class="col-lg-4 col-md-6 col-sm-12">
  
-	<h2 id="protein"> Protein </h2>
-	<p> Protein includes eggs, chicken, beef, pork, fish. Which should be consumed in moderation.</p>
+	<h2 id="Beef"> Beef </h2>
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra orci nisi, eu bibendum ex malesuada et. Vestibulum sit amet felis dui. Donec ac nisl sit amet nisi egestas elementum. Curabitur elit odio, rutrum sit amet varius eu, sagittis vitae leo. Maecenas nec eros dolor. In hac habitasse platea dictumst. Maecenas ultricies, turpis ac euismod egestas, quam metus auctor tellus, sit amet faucibus ipsum odio nec mauris. Cras ac elementum mauris, ac consectetur felis</p>
 
 </div>
 
 
 <div id="box3" class="col-lg-4 col-md-12 col-sm-12">
  
-	<h2 id="carbs">Carbs</h2>
-	<p>Carbs include above ground veggies, leafy greens and low glycemic impact berries.</p>
+	<h2 id="Sushi">Sushi</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra orci nisi, eu bibendum ex malesuada et. Vestibulum sit amet felis dui. Donec ac nisl sit amet nisi egestas elementum. Curabitur elit odio, rutrum sit amet varius eu, sagittis vitae leo. Maecenas nec eros dolor. In hac habitasse platea dictumst. Maecenas ultricies, turpis ac euismod egestas, quam metus auctor tellus, sit amet faucibus ipsum odio nec mauris. Cras ac elementum mauris, ac consectetur felis</p>
 </div>
 </div>
 
